--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -1,5 +1,15 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
+2023-01-09; Version 2.4.2
+neu:
+- Nutze perlregex-library pcre2 falls installiert
+fixes:
+- timer wieder als done markiert wenn 2 Aufnahmen gleichzeitig aufhören
+- toten Code entfernt
+- Update spanische Übersetzung
+- Speicherlecks gestopft
+- Ausreichend Zeitpuffer für Aufnahmen ohne VPS bei Umstellung
+  auf Winterzeit (kfb77)
 
 2022-02-01
 neu:
