--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -1,5 +1,10 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
+2023-05-28
+fixes:
+- deutsche Messages Satzanfang gross
+- Vermeide Division durch Null wenn Stopzeit-Startzeit=0
+
 2023-01-09; Version 2.4.2
 neu:
 - Nutze perlregex-library pcre2 falls installiert
