Fixes provided by Stefan Hofmann (vdr-portal)

--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,11 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
+2025-05-15
+thanks to Stefan Hofmann:
+- remove compiler warnings
+- some small fixes and annotations
+- avoid string overflows
+
 2025-03-20
 fixes:
 - fix timerdone processing if EPG has changed
