--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,9 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
+2025-06-22
+thanks to Stefan Hofmann:
+- get rid of 'using' directives, always use namespace prefix 'std'
+
 2025-05-15
 - provide timer in SetItemEvent with vdr 2.7.5
 thanks to Stefan Hofmann:
