Add column with "time of last recording" to search timer list

--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -1036,6 +1036,15 @@ msgstr "Sucheinträge"
 msgid "active"
 msgstr "aktiv"
 
+msgid "Channels"
+msgstr "Kanäle"
+
+msgid "useTime"
+msgstr "Uhrzeit"
+
+msgid "lastRecording"
+msgstr "letzte Aufnahme"
+
 msgid "Edit$Delete search?"
 msgstr "Suche löschen?"
 
