--- a/HISTORY
+++ b/HISTORY
@@ -1,8 +1,10 @@
 VDR Plugin 'epgsearch' Revision History
 ---------------------------------------
 2025-12-15
-- set version to 2.4.2
-- replaced deprecated call of MainThreadHook(void)
+- set version to 2.4.5
+- set version of quickepgsearch epgsearchonly conflictcheckonly to 2.4.5
+- new Variable "Aux" allows access to auxiliary field of EPG
+- removed deprecated call to MainThreadHook(void)
 - add column with "time of last recording" to search timer results
 - Search for repeats in EPG menu will ignore (episodes) in title
 - Add general searchtimer config to limit days of timer creation
