Small changes to timers day limit by Stefan Hofmann

--- a/po/cs_CZ.po
+++ b/po/cs_CZ.po
@@ -405,6 +405,12 @@ msgstr "Skupina stanic ke hledání"
 msgid "Help$Specify the channel group to check."
 msgstr ""
 
+msgid "Limit timer creation [d]"
+msgstr ""
+
+msgid "Help$Limits the creation of timers to a time span in days. A value of '0' disables the limitation."
+msgstr ""
+
 msgid "Ignore PayTV channels"
 msgstr "Ignorovat placené stanice"
 
