--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -438,6 +438,12 @@ msgstr "Tarkastettava kanavaryhmä"
 msgid "Help$Specify the channel group to check."
 msgstr "Määrittelee tarkastettavan kanavaryhmän."
 
+msgid "Limit timer creation [d]"
+msgstr ""
+
+msgid "Help$Limits the creation of timers to a time span in days. A value of '0' disables the limitation."
+msgstr ""
+
 msgid "Ignore PayTV channels"
 msgstr "Jätä salatut kanavat huomioimatta"
 
