--- a/po/ca_ES.po
+++ b/po/ca_ES.po
@@ -408,6 +408,12 @@ msgstr ""
 msgid "Help$Specify the channel group to check."
 msgstr ""
 
+msgid "Limit timer creation [d]"
+msgstr ""
+
+msgid "Help$Limits the creation of timers to a time span in days. A value of '0' disables the limitation."
+msgstr ""
+
 msgid "Ignore PayTV channels"
 msgstr ""
 
