--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -445,6 +445,12 @@ msgstr "Groupe de chaînes"
 msgid "Help$Specify the channel group to check."
 msgstr "Spécifier le nom du modèle."
 
+msgid "Limit timer creation [d]"
+msgstr ""
+
+msgid "Help$Limits the creation of timers to a time span in days. A value of '0' disables the limitation."
+msgstr ""
+
 msgid "Ignore PayTV channels"
 msgstr "Ignorer les chaînes payantes"
 
