--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -439,6 +439,12 @@ msgstr "Gruppo canali da verificare"
 msgid "Help$Specify the channel group to check."
 msgstr "Specifica il gruppo canali da verificare."
 
+msgid "Limit timer creation [d]"
+msgstr ""
+
+msgid "Help$Limits the creation of timers to a time span in days. A value of '0' disables the limitation."
+msgstr ""
+
 msgid "Ignore PayTV channels"
 msgstr "Ignora i canali a pagamento"
 
