--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -445,6 +445,12 @@ msgstr "Kanaal groep"
 msgid "Help$Specify the channel group to check."
 msgstr "Geef de naam op van het sjabloon"
 
+msgid "Limit timer creation [d]"
+msgstr ""
+
+msgid "Help$Limits the creation of timers to a time span in days. A value of '0' disables the limitation."
+msgstr ""
+
 msgid "Ignore PayTV channels"
 msgstr "Negeer PayTV kanalen"
 
