--- a/po/sk_SK.po
+++ b/po/sk_SK.po
@@ -442,6 +442,12 @@ msgstr "Skupina kanálov"
 msgid "Help$Specify the channel group to check."
 msgstr "Uveďte meno šablony"
 
+msgid "Limit timer creation [d]"
+msgstr ""
+
+msgid "Help$Limits the creation of timers to a time span in days. A value of '0' disables the limitation."
+msgstr ""
+
 msgid "Ignore PayTV channels"
 msgstr "Nevšímať si PayTV kanály"
 
